--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.16",
-        "lodash": "^4.17.5",
+        "lodash": "^4.17.15",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.21.0",
         "sass-loader": "^7.1.0",
@@ -40,6 +40,7 @@
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.0.6",
         "vue-spinner": "^1.0.3",
+        "vue-toasted": "^1.1.27",
         "vue-turbolinks": "^2.0.4",
         "vue2-dropzone": "^3.5.9"
     }
