--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "vue-at": "^2.3.2",
         "vue-avatar": "^2.1.7",
         "vue-chat-scroll": "^1.3.5",
+        "vue-clipboard2": "^0.3.1",
         "vue-context": "^4.0.3",
         "vue-emoji-picker": "^1.0.1",
         "vue-js-modal": "^1.3.31",
