--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "vue-spinner": "^1.0.3",
         "vue-toasted": "^1.1.27",
         "vue-turbolinks": "^2.0.4",
-        "vue2-dropzone": "^3.5.9"
+        "vue2-dropzone": "^3.5.9",
+        "webpack-cli": "^3.3.10"
     }
 }
